# quantum-ai-competition

./: .gitignore  Quantum-Embedding.md  README.md  data-eda.ipynb  hybrid-qnn.py  hybrid_qnn.py  main.py  paper-qnn.py  paper_qnn_v2.py  paper_qnn_v2_production.py  production_results.json  pyproject.toml  qcnn-bk.py  qcnn.py  qcnn_bk.py  qcnn_clean.py  qnn-fmnist.ipynb  quick_test.py  simple_hybrid_qnn.py  test_params.py
.kiro/specs/qnn-parameter-optimization/: requirements.md
tutorial/: QuantumMachineLearningGuide.ipynb
