[project]
name = "quantum-ai-competition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "nbformat>=5.10.4",
    "numpy>=2.2.6",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.1",
    "pennylane>=0.41.1",
    "plotly>=6.2.0",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.1",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
]
